--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   provider: ^4.3.2
   fluttertoast: ^5.0.0
   mailer: ^3.3.0
-  file_picker: ^1.1.0  
+  file_picker: ^1.1.0
+  flutter_email_sender: ^3.0.1  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
